tests/negative/typecheck/sum_annot_repeat.orng
// sum_annot_repeat.orng:11:10: error: symbol `x` is never used
//     let x: Duplicate
//         ^
// 
enum Duplicate {
    y(Int)
    y(Int)
    y(Int)
}
fn main() -> Int {
    let x: Duplicate
    0
}